[gd_scene load_steps=17 format=3 uid="uid://dthovtpivymwm"]

[ext_resource type="Script" uid="uid://d3x8d8m4xphjd" path="res://scripts/actors.gd" id="1_5q3aa"]
[ext_resource type="AudioStream" uid="uid://cyk48cxmdugpq" path="res://musicas/retro_jump.wav" id="2_0ngld"]
[ext_resource type="Texture2D" uid="uid://bl7mh01vounlq" path="res://assets/Sprite Pack 2/Bacon pack/1 - Onion Lad/Hurt (16 x 16).png" id="3_s4jkl"]
[ext_resource type="Texture2D" uid="uid://e15njj20dmdh" path="res://assets/pixilart-sprite.png" id="4_q5ipc"]
[ext_resource type="PackedScene" uid="uid://blmqo1kxwdly4" path="res://players/hitbox.tscn" id="5_o18fg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lvnin"]
size = Vector2(16, 15.625)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkacp"]
atlas = ExtResource("3_s4jkl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rh6oh"]
atlas = ExtResource("4_q5ipc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y28g"]
atlas = ExtResource("4_q5ipc")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_27t1b"]
atlas = ExtResource("4_q5ipc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye0oh"]
atlas = ExtResource("4_q5ipc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ninh5"]
atlas = ExtResource("4_q5ipc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_atas4"]
atlas = ExtResource("4_q5ipc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0hol4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkacp")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rh6oh")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y28g")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_27t1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye0oh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ninh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atas4")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="GDScript" id="GDScript_60u6h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ii0y"]
size = Vector2(19, 16)

[node name="player" type="CharacterBody2D"]
scale = Vector2(1.6, 1.6)
collision_mask = 22
script = ExtResource("1_5q3aa")
metadata/_edit_vertical_guides_ = [9.0, -64.0]

[node name="jump_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0ngld")
volume_db = -20.613

[node name="ray_right" type="RayCast2D" parent="."]
position = Vector2(2.50001, 4.375)
target_position = Vector2(16, 0)
collision_mask = 4

[node name="ray_left" type="RayCast2D" parent="."]
position = Vector2(-1.34, 4.33)
target_position = Vector2(-13, 0)
collision_mask = 4

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(1.515, 0.937499)
shape = SubResource("RectangleShape2D_lvnin")

[node name="anim" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_0hol4")
animation = &"run"

[node name="hurtbox" parent="." instance=ExtResource("5_o18fg")]
position = Vector2(0, 16)
collision_layer = 0
collision_mask = 4
script = SubResource("GDScript_60u6h")

[node name="collision2" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(1.875, -15.375)
shape = SubResource("RectangleShape2D_6ii0y")
debug_color = Color(1, 0.00360167, 0.0694004, 0.42)

[node name="remote" type="RemoteTransform2D" parent="."]

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
